# template_python

./: .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
scripts/: 00_start_uvicorn.sh
src/: server.py
src/core/: auth.py  settings.py
tests/core/: test_auth.py
tests/endpoints/: test_ping.py
