[project]
name = "template-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ipykernel>=7.2.0",
    "isort>=8.0.1",
    "jupyterlab>=4.5.8",
    "jupyterlab-code-formatter>=3.0.3",
    "jupyterlab-execute-time>=3.3.0",
    "node>=2.0.0",
    "nodejs>=0.1.1",
    "npm>=0.1.1",
]
